# abhyasa

./: .gitignore  DEVELOPMENT_SETUP.md  Heroku.md  Procfile  README.md  download_models.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  start_dev.sh
.github/workflows/: main.yml
app/: DogBreedDetector.py  download_models.py
apps/: DogBreedDetector.py  download_models.py
