[tool.poetry]
name = "sravan-ml-demos"
version = "0.1.0"
description = "Machine learning demos"
authors = ["Sravan Kumar <sravanrekandar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
gunicorn = "^20.0.4"
flask = "^1.1.2"
werkzeug = "^1.0.1"
flask-swagger = "^0.2.14"
flask_restplus = "^0.13.0"
flask_restful = "^0.3.8"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
